force-app/main/default/objects/User_Territory__c/User_Territory__c.object-meta.xml
<CustomObject>
    <label>User Territory</label>
    <nameField>
        <displayFormat>UT-{0000}</displayFormat>
        <label>User Territory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>