force-app/main/default/objects/User_Territory__c/fields/ML_Role__c.field-meta.xml
<CustomField>
    <fullName>ML_Role__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>The Role of the user within the ML Franchise</description>
    <label>ML Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Franchise Owner</fullName>
            </value>
            <value>
                <fullName>Franchise Manager</fullName>
            </value>
            <value>
                <fullName>Loan Writer</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>