force-app/main/default/objects/User_Territory__c/fields/SAO__c.field-meta.xml
<CustomField>
    <fullName>SAO__c</fullName>
    <complianceGroup>Integrity - Uncontrolled;Privacy - Non Personal Information;Source_Salesforce</complianceGroup>
    <description>Captures Mobile Lenders&apos; SAO Code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SAO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>