force-app/main/default/objects/User_Territory__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Lookup to Territory object</description>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>User Territories</relationshipLabel>
    <relationshipName>User_Territories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>