force-app/main/default/objects/User_Territory__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the ML user.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Territorys</relationshipName>
    <type>Lookup</type>
</CustomField>