force-app/main/default/objects/User_Territory__c/validationRules/Validate_User_On_Territory.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_User_On_Territory</fullName>
    <active>true</active>
    <description>This validation rule is used to validate that user is mandatory for user territory record</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
ISBLANK(User__c)
)</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>User is required.</errorMessage>
</ValidationRule>